test/scc/expr/semantic-errors/136.t
int foo() { return 10; }

int a = foo();